# pennyunpacker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  filenames.txt  files.txt
.github/workflows/: build.yml
src/: extract.c  extract.h  hash.c  hash.h  main.c  utility.h
tools/: decompress_gzip.sh
